--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,11 +20,14 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
     "paths": {
-      "@src/*": [
+      "@/*": [
         //@src로 시작하면 아래 줄의 디렉토리를 의미한다.
-        "src/*" //baseUrl을 기준으로 src/ 하위 디렉토리를 @src로 표현한다.
+        "./src/*" //baseUrl을 기준으로 src/ 하위 디렉토리를 @src로 표현한다.
       ],
-      "@components/*": ["src/components/*"] //@components로 시작하면 components/ 하위 디렉토리를 의미한다.
+      "@comp/*": ["./src/components/*"], //@components로 시작하면 components/ 하위 디렉토리를 의미한다.
+      "@img/*": ["./src/assets/images/*"],
+      "@p/*": ["./src/pages/*"],
+      "@s/*": ["./src/styles/*"]
     }
   },
   "include": ["src"],
